# PyFAME

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: deploy.yml  static.yml  tests.yml
config/: log_config.yaml
data/logs/: 2025-07-15T19-23-16.json  2025-07-16T12-27-39.json  2025-07-21T17-13-34.json
docs/: changelog.md
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: custom.css
docs/docsite/: 404.html  changelog.html  hashmap.json  index.html  license.html  reference.html
docs/docsite/about/: authors.html  changelog.html
docs/docsite/assets/: about_authors.md.2wqg2Ut3.lean.js  about_changelog.md.BgsHTD-j.js  about_changelog.md.BgsHTD-j.lean.js  about_changelog.md.GFMXYsjW.js  about_changelog.md.GFMXYsjW.lean.js  app.BvyzGLST.js  app.C5xgnobc.js  changelog.md.C5UPyUD5.js  changelog.md.C5UPyUD5.lean.js  examples_examples.md.BRrhiyUP.js  examples_examples.md.BRrhiyUP.lean.js  examples_examples.md.s3hBFY42.js  examples_examples.md.s3hBFY42.lean.js  extras_changelog.md.4CxBHRPA.js  extras_changelog.md.4CxBHRPA.lean.js  extras_changelog.md.CJFs6_iM.js  extras_changelog.md.CJFs6_iM.lean.js  extras_license.md.C5lh7e2B.js  extras_license.md.C5lh7e2B.lean.js  extras_license.md.DZBS59Xt.js  extras_license.md.DZBS59Xt.lean.js  guide_codebook.md.DcFrNuL3.js  guide_examples.md.BUaDDcPg.js  guide_examples.md.BUaDDcPg.lean.js  guide_getting_started.md.RIwIza62.js  guide_getting_started.md.RIwIza62.lean.js  index.md.BkhAtRiG.lean.js  index.md.C_ztQa_7.lean.js  index.md.DbGGQaBC.js  index.md.pAixjj4q.js  index.md.uD1opLbl.js  license.md.Bm0o23RO.js  license.md.Bm0o23RO.lean.js  reference.md.Bk01ArW-.js  reference.md.Bk01ArW-.lean.js  reference_analysis.md.DfTqcM8p.js  reference_analysis.md.DfTqcM8p.lean.js  reference_analysis.md.DvYZAJAZ.js  reference_coloring.md.BZEvqNur.js  reference_coloring.md.CByYH0uh.js  (+35 more)
docs/docsite/examples/: examples.html
docs/docsite/extras/: changelog.html  license.html
docs/docsite/guide/: codebook.html  examples.html  getting_started.html
docs/docsite/reference/: analysis.html  coloring.html  occlusion.html  overview.html  pld.html  reference.html  scrambling.html  temporal_transforms.html  utils.html
docs/src/: index.md
docs/src/about/: authors.md  changelog.md  contrib.md
docs/src/examples/: examples.md
docs/src/extras/: changelog.md
docs/src/guide/: examples.md  getting_started.md  intro.md
docs/src/reference/: analyse.md  analysis.md  codebook.md  coloring.md  index.md  moviefy.md  occlusion.md  overview.md  pld.md  reference.md  scrambling.md  temporal_transforms.md  utils.md
pyfame/: __init__.py  exceptions.py  processing_script.py  pyfame.py  utils.py
pyfame/core/: __init__.py  analysis.py  coloring.py  occlusion.py  point_light_display.py  scrambling.py  temporal_transforms.py
pyfame/utils/: __init__.py  predefined_constants.py  utils.py
site/: requirements.txt
source/: processing_script.py
source/pyfame/: pyfame.py  pyfame_utils.py  pyfameutils.py
src/: processing_script.py
src/PyFAME.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pyfame/: __init__.py
src/pyfame/analyse/: __init__.py  analyse_facial_colour_means.py  analyse_optical_flow.py  analyse_optical_flow_dense.py  analyse_optical_flow_sparse.py  analyse_to_disk.py  get_analyse_facial_colour_means.py  get_analyse_optical_flow.py
src/pyfame/analysis/: __init__.py  get_analysis_color_channel_means.py  get_analysis_optical_flow.py  get_facial_color_means.py  get_optical_flow.py
src/pyfame/core/: __init__.py  analysis.py  coloring.py  image_overlay.py  moviefy.py  occlusion.py  point_light_display.py  scrambling.py  temporal_transforms.py
src/pyfame/io/: __init__.py  (+10 more)
tests/: conftest.py  test_analysis_color_means.py  test_analysis_optical_flow.py  test_apply_noise.py  test_blur_face_region.py  test_extract_face_color_means.py  test_face_brightness_shift.py  test_face_color_shift.py  test_face_saturation_shift.py  test_facial_scramble.py  test_gen_shuffled_block_arr.py  test_generate_pld.py  test_get_optical_flow.py  test_io_create_dir.py  test_io_dir_walk.py  test_io_map_dir_structure.py  test_io_video_capture.py  test_io_video_writer.py  test_layer_color.py  test_layer_color_brightness.py  test_layer_color_saturation.py  test_layer_mask.py  test_layer_occlusion_bar.py  test_layer_occlusion_blur.py  test_layer_occlusion_noise.py  test_layer_occlusion_path.py  test_mask_face_region.py  test_occlude_face_region.py  test_shuffle_frame_order.py
(+170 files in other folders)
