[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyFAME"
version = "0.7.0"
authors = [
    { name="Gavin Bosman", email="gavin.bosman12@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python == 4.20.0.84",
    "mediapipe == 0.10.21",
    "pandas == 2.2.2",
    "numpy == 2.0.0",
    "scikit-image == 0.24.0"
]

[project.urls]
Homepage = "https://github.com/Gavin-Bosman/PyFAME"

[tool.setuptools.packages.find]
where = ["source"]
include = ["pyfame*"]
exclude = ["processing_script.py"]