[metadata]
name = PyFAME
version = 0.7.2
author = Gavin Bosman
author_email = gavin.bosman12@gmail.com
description = PyFAME: the Python Facial Analysis and Manipulation Environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gavin-Bosman/PyFAME
license = MIT
keywords = pyfame, occlusion, masking, coloring, colouring, psychology
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Natural Language :: English
    Topic :: Scientific/Engineering :: Image Processing
    Typing :: Typed

[options]
packages = 
    pyfame
package_dir =
    =src
install_requires =
    cython < 3.0
    opencv-python >= 4.10.0.0
    mediapipe >= 0.10.14
    pandas >= 2.2.0
    numpy <= 2.0.0
    scikit-image >= 0.24.0
    PyYAML <= 6.0.2
python_requires = >=3.10

[options.packages.find]
where = src
include = pyfame*
exclude = processing_script.py

[options.extras_require]
dev =
    pytest
    tox

[options.package_data]
* = *.png, *.mp4

[tool:pytest]
testpaths = tests
