[metadata]
name = PyFAME
version = 1.0.0
author = Gavin Bosman
author_email = gavin.bosman12@gmail.com
description = PyFAME: The Python Facial Analysis and Manipulation Environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gavin-Bosman/PyFAME
license = MIT
keywords = pyfame, occlusion, masking, coloring, colouring, psychology
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Natural Language :: English
    Topic :: Scientific/Engineering :: Image Processing
    Typing :: Typed

[options]
package_dir =
    = src
packages = 
    find:
install_requires =
    opencv-python >= 4.10.0.0
    mediapipe >= 0.10.20
    pandas >= 2.2.0
    numpy <= 2.0.0
    scikit-image >= 0.24.0
    pydantic >= 2.11.0
    matplotlib >= 3.10.0
    tqdm >= 4.67.0
    
python_requires = >=3.10

[options.packages.find]
where = src
include = pyfame*
exclude = processing_script.py

[options.extras_require]
dev =
    pytest
    tox

[options.package_data]
pyfame =
    schema/*.json
    layer/manipulations/stylise/overlay_images/*

[tool:pytest]
testpaths = tests
